# sarma

./: .gitignore  CHEATSHEET.md  README.md  debug_auth.py  pyproject.toml  requirements.txt  sarma-worker.ps1  sarma.ps1
lib/: ado-wit.ps1  config.ps1  conpty.ps1  executor.ps1  git-ops.ps1  pr.ps1  profile.ps1  queue.ps1  table.ps1
sarma/: config.py  logging_util.py  models.py  queue.py
sarma/master/: cli.py
sarma/worker/: executor.py  git_ops.py  pr.py  runner.py
tests/: test_executor.py  test_git_ops.py  test_models.py  test_queue.py
